CHANGES for LIRE
================

2013-03-26
==========
  - Added new method to abstract SearchHitsFilter class
  - Added TestRerankTextSearch.java
  - Added functions to FileUtils.java

2013-03-12
==========
  - Moved hashing to sub package of indexing
  - Moved Extractor and Indexor to tool package (in indexing)
  - Renamed HashingUtils to BitSampling, which is the name of the method employed.
  - Added HashingIndexor extending Indexor. It does bit sampling based hashing on the CEDD feature.
  - Tested BitSampling on OpponentHistogram and found it working.

2013-03-12
==========
  - Worked on HashingUtils to configure it for use with CEDD & tested it.
  - Added some utility methods.

2013-03-12
==========
  - Created Indexor & Extractor, an intermediate step for distributed indexing.
  - Tested it, seems to work on byte[] level.
  - Updated to Lucene 4.2
  - Updated to Commons Math 3.1.1
  - Removed deprecated calls from GenericDocumentBuilder

2013-03-08
==========
  - Fixed bug in cluster serialization.

2013-02-13
==========
  - Changed cluster medians in k-means to double.

2013-02-07
==========
  - Additional experiments.

2013-02-07
==========
  - Added MSERTest
  - Added trim function in ImageUtils

2013-01-24
==========
  - Bug fix in handling the result list based on the comment from Nikolay Neshov.

2013-01-07
==========
  - Added a verbose exception to LocalFeatureHistogramBuilder.

2013-01-07
==========
  - Fixed a non-critical bug in CEDD.java & FCTH.java
  - 10% speed up in search with CEDD

2012-12-20
==========
  - Release 0.9.3

2012-12-20
==========
  - Added OpponentHistogram to ImageSearcherFactory and DocumentBuilderFactory.
  - Updated LireDemo to include Joint Histogram and Opponent Histogram.
  - Added JointOpponentHistogram, fooled around with fuzzy opponent histogram ... didn't work out well.

2012-12-12
==========
  - changed Histogram abstract class member to double[] ... it's much faster
    on 64 bit systems running Java 1.7.